# support-copilot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: acquisition-ci.yml  app-ci-cd.yml  deploy-infra.yml  training-ci.yml
acquisition/: Dockerfile  cli.py  pyproject.toml
acquisition/chunkers/: __init__.py  recursive.py  semantic.py
acquisition/embedders/: __init__.py  embed.py
acquisition/ingestors/: __init__.py  confluence.py  gcs.py  html.py  pdf.py  tickets.py
acquisition/stores/: __init__.py  bigquery.py  vertex_index.py
api/: Dockerfile  pyproject.toml
api/app/: config.py  main.py
api/app/middleware/: auth.py
api/app/routers/: chat.py  feedback.py  suggest.py  upload.py
api/app/schemas/: models.py
api/app/services/: chat_service.py  feedback_service.py
api/tests/: conftest.py  test_chat.py  test_feedback.py  test_suggest.py
dev/: DEPLOYMENT_ISSUES.md  debug_notes.md
docs/: plan-v0.1.0-guardrails.md  plan-v0.1.0.md
inference/: Dockerfile  pipeline.py  pyproject.toml  server.py
inference/generation/: __init__.py  citations.py  llm_router.py  prompt_manager.py
inference/grading/: __init__.py  grader.py
inference/guardrails/: __init__.py
inference/reranker/: __init__.py  cross_encoder.py
inference/retrieval/: __init__.py  bm25.py  hybrid.py  vector.py
inference/tests/: test_guardrails.py
infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
prompts/v1/: answer.yaml  grading.yaml  suggest_reply.yaml  system.yaml
shared/: __init__.py  config.py  embedding_provider.py  llm_provider.py  pyproject.toml
training/: Dockerfile  cli.py  pyproject.toml  wandb_utils.py
training/answer_style/: dataset.py  eval.py  finetune.py
training/reranker/: dataset.py  eval.py  train.py
ui/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/chat/: page.tsx
ui/src/components/chat/: ChatWindow.tsx  MessageBubble.tsx  StreamingMessage.tsx  SuggestReplyButton.tsx
ui/src/components/documents/: DocumentViewer.tsx  SourceHighlight.tsx
ui/src/components/feedback/: FeedbackModal.tsx  ThumbsUpDown.tsx
ui/src/components/layout/: Header.tsx  Sidebar.tsx
ui/src/components/source-trace/: CitationCard.tsx  SourceTracePanel.tsx
ui/src/components/upload/: UploadModal.tsx
ui/src/services/: api.ts
